<resources>
    <string name="app_name">RUET Syllabus</string>
    <string-array name="semesters">
        <item>1st Year odd semester</item>
        <item>1st Year even semester</item>
        <item>2nd Year odd semester</item>
        <item>2nd Year even semester</item>
        <item>3rd Year odd semester</item>
        <item>3rd Year even semester</item>
        <item>4th Year odd semester</item>
        <item>4th Year even semester</item>
    </string-array>
    <string name="about">
        <u><b>Developed By:</b></u>\n
        Alifa Shanzidah Manarat,\n
        CSE 19, RUET.\n\n
         <u><b>Submitted To:</b></u>\n
        Suhrid Shakhar Ghosh,\n
        Assistant Professor,\n
        Dept. of CSE, RUET.\n\n
    </string>
    <string name="contact">
        For any kind of information, \n please reach me at <b>alifa.manarat@gmail.com</b>.\n
    </string>
    <string name="cse_1100">
        <b>Computer Fundamentals:</b> Introduction to Computer Basics, Types and Generation of Computers; Basic Organization and Functional Units.\n
\n<b>Hardware:</b> Basic Units of Computer Hardware; Processors; Input, Output and Memory
Devices; Keyboard; Mouse; OMR; OCR; MICR; CD-ROM; Printers; CRT; LCD; LED;
Microfilm; Floppy.\n\n<b>Software:</b> Types of Software; System Software: Familiarization with Various Operating
Systems (Windows, DOS, UNIX, Android, IOS Etc.); \n\n<b>Application Software:</b> Text
Processing (MS-WORD, etc); Spread Sheet (MS-EXCEL etc).\n\n
<b>Language:</b> Machine Language; Assembly Language; High Level Language; Assembler;
Translator; Interpreter and Compiler.\n\n
<b>Database Management:</b> Introduction of Data, Information and Management; Studying
Various Tools like Foxpro, MS Access, Oracle etc; Mathematical and Simulation (Math
Cad, Matlab etc.); Data Communications and Internet.\n\n
<b>Computer Ethics:</b> Computers in the Workplace; Computer Crime; Rules of
Communications; Privacy; Intellectual Property; Impact on Employment; Professional
Responsibility; Globalization.\n\n
    </string>
    <string name="cse_1101">
        <b>Introduction to Computer Programming:</b> Algorithm, Writing, Debugging and Running
Programs using C/C++ Compiler. \n\n
C/C++ Basics: Different Data Types and their Range, Operator and Operands and its
Precedence, Input/Output, Conditional Operators, Loops Nested Structure, Error
Handling, Built-in Functions\n\n
       <b> Functions and Arrays:</b> Writing and Calling of User–defined Functions, Recursive
Functions, Scope of Variables, Introduction to One-Dimensional Arrays, Multi-Dimensional
Arrays and Array Manipulation.\n\n
<b>Pointers and Strings:</b> Introduction to Pointers, Pointers and Array, Pointers and
Functions, String I/O, String-based Built-in Functions, String Operations, Pointer and
String.\n\n
<b>Files:</b> Introduction to Files in C/C++, Opening, Closing and Updating Binary and
Sequential Files.\n\n
<b>Advanced Topics:</b> Operations on Bits, Register Variable, Pre-Processors and Graphics
in C/C++.\n\n

    </string>
    <string name="eee_1151">
       <b>Basics of Electrical Circuit:</b> Electrical Units and Standards. Electrical Circuit Elements
and Models. Signal and Waveforms. Fourier Representation of Non-Sinusoidal
Waveforms. RMS and Average Value of Sinusoidal Waveforms. Introduction to Phasor
Algebra. DC and Steady State AC Circuit Solutions: Series, Parallel, Series-Parallel
Networks, Loop and Nodal Methods, Delta-Wye Transformations.\n\n
<b>Circuit Theorems:</b> KVL, KCL, Thevenin, Norton, Super-position, Reciprocity and
Maximum Power Transfer Theorems, Resonance. Circuit Analysis using Popular
Simulation Tools\n\n
    </string>
    <string name="cse_3100">
        Students will Work in Groups or Individually to Develop Web based Applications and
Design a Web Site by Adding Client Side and Server Side Scripting and Interfacing the
Web Applications to a Database.\n\n
    </string>
    <string name="cse_3101">
        <b>Concepts of Database Systems:</b> Files and Databases, Database Management Systems;
Transaction Management, Structure of a DBMS, Applications.\n\n
<b>Entity-Relationship Concepts:</b> Entity Types, Entity Set, Attribute and Key, Relationships,
Relation Types, Entity Relationship, ER Modeling, ER Diagrams, Database Design using
ER Diagrams, Enhanced Entity-Relationship (EER) Model.\n\n
<b>Normalization:</b> Normal Forms, Normalized Relations and Database Performance; DeNormalization.\n\n
Relational Model: Structure of Relational Databases, Relational Algebra, Relational
Algebra Operations, Modification of the Database, Introduction to Views, Pitfalls in
Relational Database Design.\n\n
<b>SQL:</b> Data Definition Language, Data Manipulation Language, Basics of SQL, Query
Designing in SQL using Aggregate Functions and Nested Queries, Embedded SQL,
Triggers, Procedures; Indexes; Declarative Constrains and Database Triggers.\n\n
<b>Concurrency Control:</b> Lock based Protocols, Timestamp based Protocols, Validation
based Protocols, Deadlock.\n\n
        <b>Recovery System:</b> Failure Classification, Storage Structure, Recovery and Atomicity,
Log-based Recovery, Recovery with Concurrent Transactions, Advanced Recovery
Techniques, RAID Model.\n\n
<b>Advanced Database Management Systems:</b> No SQL Systems, Distributed Systems,
Object-Oriented System, Temporal, Database Security, Data Warehousing and Data
Mining, Database Administration and Tuning. \n\n
    </string>
    <string name="cse_3103">
        <b>Fundamental:</b> Representation of Signals in Time and Frequency Domain, Properties of
Fourier Transform, Delta Function, Auto-Correlation and Cross-Correlation.\n\n
<b>Data Communication and Network Model:</b> Data Communication, Fundamental of
Networks, History of the Internet, Protocols and Standards.\n\n
<b>Signal and System, Transmission Media, Interfaces:</b> Analog and Digital Data, Periodic
Analog Signals, Digital Signals, Transmission Impairment, Data Rate Limits and
Performance.\n\n
<b>Digital and Analog Transmission:</b> Digital to Digital Conversion, Line Encoding
Schemes, Block Coding, Scrambling, Analog to Digital Conversion, Transmission
Modes, Digital to Analog Conversion, Bandwidth Utilization, Analog to Digital Conversion.\n\n
<b>Multiplexing, Spreading and Switching:</b> Multiplexing, Spread Spectrum, Packet-Switched Data Networks, Circuit Switched Data Networks, Virtual Circuit Networks.
Transmission Medium: Guided Media and Unguided Media. \n\n
    </string>
    <string name="cse_3105">
        <b>Introduction:</b> Introduction to Software and its Nature, Software Engineering Methods,
Professional and Ethical Responsibility of a Software Engineer.\n\n
<b>Software Process Model:</b> Different Types of Software Process Model and their
Implementations, Costs of Software Engineering.\n\n
<b>Software Requirement Analysis:</b> Software Requirements Analysis and their
Applications, Software Prototyping, Basic Concepts of Different Formal Software
Specification.\n\n
<b>Design of Software:</b> Software Design and its Different Techniques, Software
Configuration Managements. System Structuring, Control Models, Modular
Decomposition, Domain-Specific Architecture. \n\n
<b>Software Testing:</b> Software Validation and Verification: Verification and Validation
Planning, Softwares Testing Strategies and Different Type of Testing Techniques, Art of
Debugging.\n\n
<b>Software Quality Assurance:</b> Management and its Quality Assurance, Software
Cognitive Fundamentals, Concepts of Software Reengineering and Web Engineering. \n\n
<b>Advance Topics:</b> Software Reliability Metrics, Software Reliability Specification,
Statistical Testing and Reliability Growth Modeling, Use of CASE Tools and Technological
Support in Engineering Software, Introduction to Unified Modeling Language–UML.\n\n
    </string>
    <string name="cse_3107">
        <b>Introduction:</b> Statistics and its Importance, Population and Sample, Variable and
Constants, Statistical Data, Data Collection and Presentation, Construction of Frequency
Distribution and Graphical Presentation.\n\n
<b>Measures of Central Tendency:</b> Arithmetic Mean, Geometric Mean, Harmonic Mean,
Median, Mode, Weighted Mean.\n\n
<b>Measures of Dispersion:</b> Range, Standard Deviation, Variance, Moments, Skewness
and Kurtosis. \n\n
        <b>Correlation Theory:</b> Linear Correlation and its Measures and Significance, Rank
Correlation. \n\n
<b>Regression Analysis:</b> Linear and Non-Linear Regression, Least-Square Method of Curve
Fittings. \n\n
<b>Probability:</b> Elementary Concepts, Laws of Probability – Additive and Multiplicative Law,
Conditional Probability and Bay‟s Theorem, Random Variables, Mathematical Expectation.
Probability Distributions: Binomial Distribution, Poisson Distribution and Normal
Distribution. \n\n
<b>Queuing Theory:</b> Stochastic Processes, Discrete Time Markov Chain and Continuous
Time Markov Chain. Birth-Death Process in Queuing. Queuing Models:
M/M/1,M/M/C,M/G/1,M/D/1,G/M/1 Solution of Network of Queue-Closed Queuing Models
and Approximate Models. Application of Queuing Models in Computer Science. \n\n
    </string>
    <string name="cse_3109">
        <b>Microcomputer System:</b> Introduction to Different Types of Microprocessors and its
Applications, Organization of Intel 8086/8088 Microprocessor, the Component of
Microcomputer System, I/O Device, Interrupt Structures, I/O Interfacing, DMA, CoProcessors, RISC Processors, Power PC Processor, CISC Processor, Direct Video RAM
Accessing, Memory Module.\n\n
<b>Introduction of Assembly Language:</b> Program Structure and its Components, Few
Basic Instruction, Input/Output Instruction.\n\n
<b>Flag Register and Flow Control:</b> The Flag Register, Flow Control Instructions,
Conditional and Unconditional Jumps, Branching and Looping Structures.
Logic and Arithmetic Operation: Logic, Shift and Rotate Instruction, Multiplication and
Division Instructions.\n\n
<b>Arrays and Data Structure:</b> Arrays and Related Addressing Modes, DUP Operator,
Register Indirect Modes, Based and Indexed Addressing Modes, Basic Stack Operations,
Procedures Declaration, Communication between Procedures, Calling a Procedure. \n\n
<b>String Manipulation:</b> The String Instructions, Director Flag, Moving a String, Storing a
String, Loading a String, Scanning a String, Comparing Strings, Substring Operation.\n\n

    </string>
    <string name="cse_3112">
        <b>Introduction:</b> Issues of Technical Writing and Effective Oral Presentation in Computer
Science and Engineering.\n\n
<b>Writing Issues:</b> Writing Styles of Definitions, Propositions, Theorems and Proofs;
Preparation of Reports, Research Papers.\n\n
<b>Thesis and Books:</b> Abstract, Preface, Contents, Bibliography and Index; Writing of Book
Reviews and Referee Reports.\n\n
<b>Writing and Presentation Tools:</b> LATEX; Diagram Drawing Software; Presentation
Tools.\n\n
    </string>
</resources>