<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".cse31">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textStyle="bold|italic"
            android:text="CSE 3100\nWeb Based Application Lab/Project\nContact hours/week: 3/2\nCredits: 0.75\n"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cse_3100"
            android:textStyle="normal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textStyle="bold|italic"
            android:text="CSE 3101\nDatabase Systems\nContact hours/week: 3\nCredits: 3\n"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cse_3101"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textStyle="bold|italic"
            android:text="CSE 3102\nSessional based on CSE 3101\nContact hours/week: 3\nCredits: 1.5\n"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sessional based on the theory of course CSE 3101.\n\n"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textStyle="bold|italic"
            android:text="CSE 3103\nData Communication\nContact hours/week: 3\nCredits: 3\n"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cse_3103"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textStyle="bold|italic"
            android:text="CSE 3104\nSessional based on CSE 3103\nContact hours/week: 3/2\nCredits: 0.75\n"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sessional based on the theory of course CSE 3103.\n\n"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textStyle="bold|italic"
            android:text="CSE 3105\nSoftware Engineering\nContact hours/week: 3\nCredits: 3\n"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cse_3105"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textStyle="bold|italic"
            android:text="CSE 3107\nApplied Statistics and Queuing Theory\nContact hours/week: 3\nCredits: 3\n"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cse_3107"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textStyle="bold|italic"
            android:text="CSE 3109\nMicroprocessors and Assembly\nContact hours/week: 3\nCredits: 3\n"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cse_3109"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textStyle="bold|italic"
            android:text="CSE 3110\nSessional based on CSE 3109\ncontact hours/week: 3\nCredits: 1.5\n"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sessional based on the theory of course CSE 3109.\n\n"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textStyle="bold|italic"
            android:text="CSE 3112\nTechnical Writing and Presentation\nContact hours/week: 3/2\nCredits: 0.75\n"
            android:textColor="@color/black"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cse_3112"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="normal" />


    </LinearLayout>

</ScrollView>